1999-09-07  Michael Meeks  <michael@imaginator.com>

	* libgnomevfs/gnome-vfs-ops.c (gnome_vfs_open_from_uri): Added new
	improved re-open for non-random capable file methods.

	* doc/writing-modules.txt: Updated.

	* libgnomevfs/gnome-vfs-seekable.c: Actualy does something now.

	* modules/file-method.c (do_create): Fixed unix_mode on created file
	to allow reading from a created file.

1999-09-06  Ettore Perazzoli  <ettore@comm2000.it>

	* libgnomevfs-pthread/gnome-vfs-job.c (gnome_vfs_job_new):
	Initialize `wakeup_channel_lock'.
	(gnome_vfs_job_destroy): Free it.
	(wakeup): New helper function.
	(job_oneway_notify): Use it.  Lock the channel mutex before doing
	the notification.
	(job_notify): Likewise.
	(job_ack_notify): Unlock the channel mutex.

	* libgnomevfs-pthread/gnome-vfs-job.h: New member
	`wakeup_channel_lock' in `GnomeVFSJob'.

	* libgnomevfs-pthread/gnome-vfs-job.c (job_notify): Set
	`want_notify_ack' to TRUE before waiting for the acknowledgment
	condition.
	(job_ack_notify): Signal the acknowledgment condition only if
	`want_notify_ack' is TRUE.

	* libgnomevfs-pthread/gnome-vfs-job.h: New member
	`want_notify_ack' in `GnomeVFSJob'.

1999-09-06  Michael Meeks  <michael@imaginator.com>

	* libgnomevfs/gnome-vfs-private.h: Add include gnome-vfs-seekable.h

	* libgnomevfs/gnome-vfs-seekable.[ch]: Created.

	* libgnomevfs/Makefile.am: Include them.

	* libgnomevfs/gnome-vfs-handle.c (gnome_vfs_handle_new): Added
	OPEN_RANDOM hook here.

	* libgnomevfs/gnome-vfs-ops.c (gnome_vfs_open_from_uri): and removed
	hook from here.

	* test/test-seek.c: Implemented fully.

	* modules/file-method.c (do_tell, do_seek): correct order to offset
	then whence.

	* test/gnome-file-selection/gicon.c (gicon_get_icon_for_file): Add
	precondition.

1999-09-06  Ettore Perazzoli  <ettore@comm2000.it>

	* libgnomevfs-corba/gnome-vfs-async-ops.c
	(impl_Notify_open_as_channel): If the operation fails, the context
	is not busy anymore.
